# esp32_rover_zephyrOS

./: .gitignore  CMakeLists.txt  LICENSE  README.rst  esp32_rover_robocar.overlay  prj.conf
applications/app_core/: CMakeLists.txt  esp32_rover_robocar_appcpu.overlay  prj.conf
applications/app_core/src/: ble_services.cpp
applications/comm_core/: CMakeLists.txt  esp32_rover_robocar_appcpu.overlay  prj.conf
applications/comm_core/src/: ble_services.cpp  janitor_wq.cpp  main.cpp
boards/freenove/espressif/esp32_rover/: Kconfig.defconfig  Kconfig.esp32_rover  board.yml  esp32_rover-pinctrl.dtsi  esp32_rover_appcpu.dts  esp32_rover_appcpu.yaml  esp32_rover_procpu.dts  esp32_rover_procpu.yaml
boards/freenove/espressif/esp32_rover/doc/: index.rst
src/: battery_mon.cpp  main.cpp
